[gd_scene load_steps=48 format=3 uid="uid://c1n8xrti8afpc"]

[ext_resource type="Script" uid="uid://bk5xpwq60mxaw" path="res://Characters/player.gd" id="1_oa43o"]
[ext_resource type="Script" uid="uid://cnmr3wheqypja" path="res://addons/finite_state_machine/scripts/finite_state_machine.gd" id="2_p4q1k"]
[ext_resource type="Shader" uid="uid://c43e2atig5sfd" path="res://TestStuff/Shaders/outline.gdshader" id="3_ibds6"]
[ext_resource type="Script" uid="uid://1di8g1bycqx7" path="res://Characters/head.gd" id="3_kj3jh"]
[ext_resource type="Script" uid="uid://01t6ahuof33w" path="res://Characters/body.gd" id="3_kv3lp"]
[ext_resource type="Script" uid="uid://h8nb0dknwxhv" path="res://Characters/legs.gd" id="3_sof65"]
[ext_resource type="Script" uid="uid://bybsv3jitei88" path="res://Characters/Climb.gd" id="4_2ehjw"]
[ext_resource type="Script" uid="uid://bu5ycqc3jrvcy" path="res://Characters/StateMachine/Idle.gd" id="5_6pvtv"]
[ext_resource type="Script" uid="uid://ns4o7plsvfph" path="res://Characters/StateMachine/Run.gd" id="6_q5vx6"]
[ext_resource type="Script" uid="uid://d14nv3b25luq6" path="res://Characters/StateMachine/Air.gd" id="7_q0tn7"]
[ext_resource type="Script" uid="uid://ctkh8koxf1xrc" path="res://Characters/StateMachine/Jump.gd" id="8_856fg"]
[ext_resource type="Curve" uid="uid://cv4u1kjdyu52w" path="res://Characters/run_curve.tres" id="8_iqy3b"]
[ext_resource type="Script" uid="uid://b5i68exdxmt1a" path="res://Characters/StateMachine/Crouch.gd" id="9_84rn1"]
[ext_resource type="Script" uid="uid://ctlngoj5bvi3i" path="res://Characters/StateMachine/Slide.gd" id="10_d4xg0"]
[ext_resource type="Script" uid="uid://bcvel2nki6lv7" path="res://Characters/StateMachine/Wallrun.gd" id="11_5sljj"]
[ext_resource type="Script" uid="uid://bgq23j57a5lpx" path="res://Characters/StateMachine/UpWallrun.gd" id="13_47a8u"]
[ext_resource type="Script" uid="uid://c1misojvmpngf" path="res://Characters/StateMachine/LedgeGrab.gd" id="17_qy47v"]
[ext_resource type="Script" uid="uid://bc3nhvbvrolye" path="res://Characters/StateMachine/Mantle.gd" id="18_433q2"]
[ext_resource type="Script" uid="uid://bvx4uegmo80y1" path="res://Characters/StateMachine/UpWallrunJump.gd" id="19_h3pa0"]
[ext_resource type="Script" uid="uid://ot381nyq2jup" path="res://Characters/StateMachine/player_state.gd" id="20_ibds6"]
[ext_resource type="Script" uid="uid://b7ssktn521xd" path="res://Characters/StateMachine/wall_jump.gd" id="21_ibds6"]
[ext_resource type="Script" uid="uid://1tmh1xw8whsn" path="res://Characters/StateMachine/fly.gd" id="22_aw3oq"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_oyfeb"]
radius = 0.25
height = 1.9

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_p17bk"]
radius = 0.25
height = 0.75

[sub_resource type="CylinderShape3D" id="CylinderShape3D_rdl2t"]
height = 0.1
radius = 0.2

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_cvve5"]
sky_top_color = Color(0.360662, 0.694697, 0.820075, 1)
sky_horizon_color = Color(0.378749, 0.709985, 0.794153, 1)
ground_bottom_color = Color(0.913254, 0.767694, 0.49831, 1)
ground_horizon_color = Color(0.897279, 0.571209, 0.471812, 1)

[sub_resource type="Sky" id="Sky_3e6v0"]
sky_material = SubResource("ProceduralSkyMaterial_cvve5")

[sub_resource type="Environment" id="Environment_ibds6"]
background_mode = 2
background_canvas_max_layer = 1
sky = SubResource("Sky_3e6v0")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ibds6"]
render_priority = 0
shader = ExtResource("3_ibds6")
shader_parameter/outlineColor = Color(0, 0, 0, 0.78)
shader_parameter/depth_threshold = 0.05
shader_parameter/normal_threshold = 0.8
shader_parameter/normal_smoothing = 0.5
shader_parameter/max_thickness = 1.3
shader_parameter/min_thickness = 0.5
shader_parameter/max_distance = 8000.0
shader_parameter/min_distance = 2.0
shader_parameter/grazing_fresnel_power = 5.0
shader_parameter/grazing_angle_mask_power = 1.0
shader_parameter/grazing_angle_modulation_factor = 50.0

[sub_resource type="QuadMesh" id="QuadMesh_h3pa0"]
material = SubResource("ShaderMaterial_ibds6")
flip_faces = true
size = Vector2(2, 2)

[sub_resource type="BoxShape3D" id="BoxShape3D_ckefi"]
size = Vector3(0.4, 1.6, 0.3)

[sub_resource type="SphereShape3D" id="SphereShape3D_y4qxt"]
radius = 0.23

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_71r1b"]
radius = 0.24
height = 1.9

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_rxkpe"]
radius = 0.24
height = 0.75

[sub_resource type="CylinderShape3D" id="CylinderShape3D_mm4ee"]
height = 0.7

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_5qlqq"]
radius = 0.248
height = 0.5

[sub_resource type="CylinderShape3D" id="CylinderShape3D_ofnkf"]
height = 0.5
radius = 0.35

[sub_resource type="CylinderShape3D" id="CylinderShape3D_u3y0t"]
height = 0.5
radius = 0.35

[sub_resource type="CylinderShape3D" id="CylinderShape3D_mkr1h"]
height = 0.8
radius = 0.45

[sub_resource type="Curve" id="Curve_rnlko"]
_limits = [0.0, 2.5, 0.0, 2.0]
_data = [Vector2(0, 0), 0.0, 0.657192, 0, 0, Vector2(1, 1), 1.07088, 1.07088, 0, 0, Vector2(2, 2.5), 0.829329, 0.0, 0, 0]
point_count = 3

[sub_resource type="Curve" id="Curve_52wli"]
_data = [Vector2(0, 0), 0.0, 2.43212, 0, 0, Vector2(1, 1), 0.148289, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_lin1y"]
_data = [Vector2(0, 0), 0.0, -0.489645, 0, 0, Vector2(0.308824, 0.366038), 4.22642, 4.22642, 0, 0, Vector2(0.582143, 0.954717), 0.234801, 0.234801, 0, 0, Vector2(0.746429, 0.501887), -4.07547, -4.07547, 0, 0, Vector2(1, 0.0943396), -0.716342, 0.0, 0, 0]
point_count = 5

[sub_resource type="BoxShape3D" id="BoxShape3D_ibds6"]
size = Vector3(0.1, 1.5, 0.1)

[sub_resource type="Curve" id="Curve_8an5f"]
_data = [Vector2(0, 0.245283), 0.0, 0.978749, 0, 0, Vector2(0.152597, 0.471698), 1.69057, 1.69057, 0, 0, Vector2(0.905844, 1), -3.39967e-07, -3.39967e-07, 0, 0, Vector2(1, 1), 0.117203, 0.0, 0, 0]
point_count = 4

[sub_resource type="LabelSettings" id="LabelSettings_mm6q2"]
font_size = 34
outline_size = 3
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_f0lxb"]
font_size = 29
outline_size = 5
outline_color = Color(0.0962047, 0.0962048, 0.0962047, 1)

[sub_resource type="LabelSettings" id="LabelSettings_x328j"]
font_size = 42

[node name="Player" type="CharacterBody3D" node_paths=PackedStringArray("legs", "head", "body", "climb")]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_oa43o")
legs = NodePath("Legs")
head = NodePath("Head")
body = NodePath("Body")
climb = NodePath("Climb")
gravity = 17.0
jump_power = 6.21

[node name="StandCollision" type="CollisionShape3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_oyfeb")

[node name="CrouchCollision" type="CollisionShape3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.425, 0)
shape = SubResource("CapsuleShape3D_p17bk")
disabled = true

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
script = ExtResource("3_kj3jh")
fov = 90.0

[node name="HeadFreeSpaceCast" type="ShapeCast3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.250672, 0)
enabled = false
shape = SubResource("CylinderShape3D_rdl2t")
target_position = Vector3(0, 0.45, 0)

[node name="RemoteCamera" type="RemoteTransform3D" parent="Head"]
unique_name_in_owner = true
remote_path = NodePath("../CanvasLayer/SubViewportContainer/SubViewport/Camera")

[node name="CanvasLayer" type="CanvasLayer" parent="Head"]

[node name="SubViewportContainer" type="SubViewportContainer" parent="Head/CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="Head/CanvasLayer/SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(1106, 622)
render_target_update_mode = 4

[node name="Camera" type="Camera3D" parent="Head/CanvasLayer/SubViewportContainer/SubViewport"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
cull_mask = 1048573
environment = SubResource("Environment_ibds6")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Head/CanvasLayer/SubViewportContainer/SubViewport/Camera"]
mesh = SubResource("QuadMesh_h3pa0")

[node name="Climb" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
script = ExtResource("4_2ehjw")

[node name="ObstacleHeight" type="RayCast3D" parent="Climb"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.851986, -0.365159)
target_position = Vector3(0, -2.125, 0)
collision_mask = 5
debug_shape_custom_color = Color(0, 0.94902, 0, 1)

[node name="ObstacleObstr" type="RayCast3D" parent="Climb"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.162644, 0.0652389)
target_position = Vector3(0, 0, -0.8)
collision_mask = 5
debug_shape_custom_color = Color(0, 0.94902, 0, 1)

[node name="ObstacleDetector" type="ShapeCast3D" parent="Climb"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.162644, -0.248098)
shape = SubResource("BoxShape3D_ckefi")
target_position = Vector3(0, 0, -0.3)
margin = 0.01
collision_mask = 5
debug_shape_custom_color = Color(0.146232, 0.90059, 3.46541e-06, 1)

[node name="MantleThrough" type="ShapeCast3D" parent="Climb"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.64, -0.006)
shape = SubResource("SphereShape3D_y4qxt")
target_position = Vector3(0, 0, -0.5)

[node name="MantleContainer" type="Node3D" parent="Climb"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.847832, -0.505697)

[node name="StandFreeSpace" type="ShapeCast3D" parent="Climb/MantleContainer"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 4.17233e-07, -0.951835)
shape = SubResource("CapsuleShape3D_71r1b")
target_position = Vector3(0, 0, 0)
collision_mask = 5

[node name="CrouchFreeSpace" type="ShapeCast3D" parent="Climb/MantleContainer"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 3.57628e-07, -0.376832)
shape = SubResource("CapsuleShape3D_rxkpe")
target_position = Vector3(0, 0, 0)
collision_mask = 5

[node name="Body" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.00055, 0)
script = ExtResource("3_kv3lp")

[node name="WallShape" type="ShapeCast3D" parent="Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.474861, 0)
shape = SubResource("CylinderShape3D_mm4ee")
target_position = Vector3(0, 0, 0)

[node name="WallRayHead" type="RayCast3D" parent="Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.834449, 0)
enabled = false
target_position = Vector3(0.5, 0, 0)
hit_from_inside = true

[node name="UpWallRayHead" type="RayCast3D" parent="Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.27176, 0)
enabled = false
target_position = Vector3(0.5, 0, 0)
hit_from_inside = true

[node name="WallRaySide" type="RayCast3D" parent="Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.47, 0)
target_position = Vector3(0.5, 0, 0)

[node name="Legs" type="Node3D" parent="."]
script = ExtResource("3_sof65")

[node name="FloorCast" type="ShapeCast3D" parent="Legs"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.301, 0)
enabled = false
shape = SubResource("CapsuleShape3D_5qlqq")
target_position = Vector3(0, -0.68, 0)

[node name="FloorRay" type="RayCast3D" parent="Legs/FloorCast"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.243849, 0)
target_position = Vector3(0, -0.8, 0)

[node name="StairsCast" type="ShapeCast3D" parent="Legs"]
transform = Transform3D(0.999996, 0, -0.00274016, 0, 1, 0, 0.00274016, 0, 0.999996, 0, 0.281829, 0)
enabled = false
shape = SubResource("CylinderShape3D_ofnkf")
target_position = Vector3(0, 0, 0)

[node name="StairsBeneath" type="ShapeCast3D" parent="Legs/StairsCast"]
enabled = false
shape = SubResource("CylinderShape3D_u3y0t")
target_position = Vector3(0, -0.5, 0)

[node name="FreeSpaceRayCast" type="RayCast3D" parent="Legs/StairsCast"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0)
enabled = false
target_position = Vector3(0, 0, -0.75)

[node name="StairsFloorRayCast" type="RayCast3D" parent="Legs/StairsCast"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0)
enabled = false

[node name="StairsNear" type="ShapeCast3D" parent="Legs/StairsCast"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.151852, 0)
enabled = false
shape = SubResource("CylinderShape3D_mkr1h")
target_position = Vector3(0, 0, 0)

[node name="FiniteStateMachine" type="Node" parent="." node_paths=PackedStringArray("current_state")]
unique_name_in_owner = true
script = ExtResource("2_p4q1k")
current_state = NodePath("Idle")

[node name="Idle" type="Node" parent="FiniteStateMachine"]
script = ExtResource("5_6pvtv")

[node name="Run" type="Node" parent="FiniteStateMachine"]
script = ExtResource("6_q5vx6")
running_curve = ExtResource("8_iqy3b")

[node name="Timer" type="Timer" parent="FiniteStateMachine/Run"]
process_callback = 0
wait_time = 0.1
autostart = true

[node name="Air" type="Node" parent="FiniteStateMachine"]
script = ExtResource("7_q0tn7")
can_jump_in_this_state = false

[node name="CoyoteTimer" type="Timer" parent="FiniteStateMachine/Air"]
process_callback = 0
wait_time = 0.3
one_shot = true

[node name="IgnoreLedges" type="Timer" parent="FiniteStateMachine/Air"]
process_callback = 0
one_shot = true

[node name="Jump" type="Node" parent="FiniteStateMachine"]
script = ExtResource("8_856fg")
can_jump_in_this_state = false

[node name="Crouch" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("slide_node")]
script = ExtResource("9_84rn1")
slide_node = NodePath("../Slide")
can_jump_in_this_state = false
can_crouch_in_this_state = false

[node name="Slide" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("crouch_node")]
script = ExtResource("10_d4xg0")
crouch_node = NodePath("../Crouch")
_curve = SubResource("Curve_rnlko")

[node name="EnterState" type="Timer" parent="FiniteStateMachine/Slide"]
process_callback = 0
wait_time = 0.5
one_shot = true

[node name="Wallrun" type="Node" parent="FiniteStateMachine"]
script = ExtResource("11_5sljj")
speed_curve = SubResource("Curve_52wli")
wall_curve = SubResource("Curve_lin1y")

[node name="NoWall" type="ShapeCast3D" parent="FiniteStateMachine/Wallrun"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("BoxShape3D_ibds6")
target_position = Vector3(0, 0, -0.5)
collision_mask = 5

[node name="NoWallTimer" type="Timer" parent="FiniteStateMachine/Wallrun/NoWall"]
process_callback = 0
one_shot = true

[node name="Timer" type="Timer" parent="FiniteStateMachine/Wallrun"]
process_callback = 0
wait_time = 1.98
one_shot = true

[node name="DotTimer" type="Timer" parent="FiniteStateMachine/Wallrun"]
process_callback = 0
wait_time = 0.05

[node name="UpWallrun" type="Node" parent="FiniteStateMachine"]
script = ExtResource("13_47a8u")
up_curve = SubResource("Curve_8an5f")

[node name="WallTimer" type="Timer" parent="FiniteStateMachine/UpWallrun"]
process_callback = 0
wait_time = 0.75
one_shot = true

[node name="TurnTimer" type="Timer" parent="FiniteStateMachine/UpWallrun"]
process_callback = 0
one_shot = true

[node name="CoyoteTimer" type="Timer" parent="FiniteStateMachine/UpWallrun"]
process_callback = 0
one_shot = true

[node name="LedgeGrab" type="Node" parent="FiniteStateMachine"]
script = ExtResource("17_qy47v")

[node name="CamTimer" type="Timer" parent="FiniteStateMachine/LedgeGrab"]
process_callback = 0
wait_time = 0.05
one_shot = true

[node name="Mantle" type="Node" parent="FiniteStateMachine"]
unique_name_in_owner = true
script = ExtResource("18_433q2")

[node name="Vault" type="Node" parent="FiniteStateMachine"]

[node name="UpWallrunJump" type="Node" parent="FiniteStateMachine"]
script = ExtResource("19_h3pa0")
metadata/_custom_type_script = ExtResource("20_ibds6")

[node name="WallJump" type="Node" parent="FiniteStateMachine"]
script = ExtResource("21_ibds6")
metadata/_custom_type_script = ExtResource("20_ibds6")

[node name="Fly" type="Node" parent="FiniteStateMachine"]
script = ExtResource("22_aw3oq")
metadata/_custom_type_script = ExtResource("20_ibds6")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2
follow_viewport_enabled = true

[node name="Label2" type="Label" parent="CanvasLayer"]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 61.0
offset_top = 491.0
offset_right = -775.0
offset_bottom = -61.0
grow_horizontal = 2
grow_vertical = 2
text = "NTRCN TRNMCG"
label_settings = SubResource("LabelSettings_mm6q2")
horizontal_alignment = 2

[node name="Label3" type="Label" parent="CanvasLayer"]
unique_name_in_owner = true
visible = false
light_mask = 0
offset_left = 586.0
offset_top = 51.0
offset_right = 1117.0
offset_bottom = 121.0
text = "NTRCN TRNMCG"
label_settings = SubResource("LabelSettings_f0lxb")
horizontal_alignment = 2

[node name="Label4" type="Label" parent="CanvasLayer"]
unique_name_in_owner = true
light_mask = 0
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 586.0
offset_top = 505.0
offset_right = -12.0
offset_bottom = -47.0
grow_horizontal = 2
grow_vertical = 2
text = "NTRCN TRNMCG"
label_settings = SubResource("LabelSettings_f0lxb")
horizontal_alignment = 2

[node name="Label5" type="Label" parent="CanvasLayer"]
unique_name_in_owner = true
light_mask = 0
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 592.0
offset_top = 415.0
offset_right = -10.0
offset_bottom = -124.0
grow_horizontal = 2
grow_vertical = 2
text = "gay hotdog
"
label_settings = SubResource("LabelSettings_f0lxb")
horizontal_alignment = 2

[node name="Label" type="Label" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 68.0
offset_top = 52.0
offset_right = -950.0
offset_bottom = -451.0
grow_horizontal = 2
grow_vertical = 2
text = "0/10
"
label_settings = SubResource("LabelSettings_x328j")

[connection signal="update_ledge" from="Climb" to="FiniteStateMachine/LedgeGrab" method="_on_climb_update_ledge"]
[connection signal="timeout" from="FiniteStateMachine/Run/Timer" to="FiniteStateMachine/Run" method="update_yaw"]
[connection signal="timeout" from="FiniteStateMachine/Air/CoyoteTimer" to="FiniteStateMachine/Air" method="coyote_disable_jump"]
[connection signal="timeout" from="FiniteStateMachine/Air/IgnoreLedges" to="FiniteStateMachine/Air" method="_on_ignore_ledges_timeout"]
[connection signal="timeout" from="FiniteStateMachine/Slide/EnterState" to="FiniteStateMachine/Slide" method="_on_enter_state_timeout"]
[connection signal="timeout" from="FiniteStateMachine/Wallrun/NoWall/NoWallTimer" to="FiniteStateMachine/Wallrun" method="_on_no_wall_timer_timeout"]
[connection signal="timeout" from="FiniteStateMachine/Wallrun/Timer" to="FiniteStateMachine/Wallrun" method="wallrun_timeout"]
[connection signal="timeout" from="FiniteStateMachine/Wallrun/DotTimer" to="FiniteStateMachine/Wallrun" method="update_dot"]
[connection signal="timeout" from="FiniteStateMachine/UpWallrun/WallTimer" to="FiniteStateMachine/UpWallrun" method="_on_walltimer_timeout"]
[connection signal="timeout" from="FiniteStateMachine/UpWallrun/TurnTimer" to="FiniteStateMachine/UpWallrun" method="_on_timer_timeout"]
[connection signal="timeout" from="FiniteStateMachine/UpWallrun/CoyoteTimer" to="FiniteStateMachine/UpWallrun" method="_on_timer_timeout"]
[connection signal="timeout" from="FiniteStateMachine/LedgeGrab/CamTimer" to="FiniteStateMachine/LedgeGrab" method="cam_tween"]
